# scene_identification_tagging

./: .gitignore  CMakeLists.txt  LICENSE  README  README.MD  build.gradle  catalog-v001.xml  gradlew  package.xml  settings.gradle
files/: catalog-v001.xml  globFit-recognition-base.owl  globFit-recognition-base_old.owl  scene.owl  toSceneExtrapolation.owl
files/semantic-scene-library/Aboxes/: catalog-v001.xml  empty-object_spatial-rules.owl  empty-scene.owl  todo
files/semantic-scene-library/classDiagrams/: semanticSceneLibrary-simplified.uml
files/semantic-scene-library/example/: ObjectHierarchyTest.owl  SceneTest.owl  SpatialRelationshipsTest.owl  catalog-v001.xml
files/semantic-scene-library/ontologyBase/: SWRL spatial Relations  empty-object.owl
gradle/wrapper/: gradle-wrapper.properties
resources/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
resources/doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
resources/doc/it/emarolab/scene_identification_tagging/: SITBase.CLASS.html  SITBase.DATA_PROPERTY.html  SITBase.INDIVIDUAL.html  SITBase.OBJECT_PROPERTY.html  SITBase.VOCABOLARY.html  SITBase.html  SpatialSimplifier.html  Test.html  package-frame.html  package-summary.html  package-tree.html
resources/doc/it/emarolab/scene_identification_tagging/owloopDescriptor/: SceneClassDescriptor.html  SceneIndividualDescriptor.html  SpatialClassDescriptor.html  SpatialIndividualDescriptor.html  (+4 more)
resources/semantic-scene-library/Aboxes/: SWRL spatial Relations  catalog-v001.xml  empty-object.owl  empty-object_spatial-rules.owl  empty-scene.owl  todo
resources/semantic-scene-library/example/: ArchitectureTest.owl  ObjectHierarchyTest.owl  SceneTest.owl  SpatialRelationshipsTest.owl  catalog-v001.xml
resources/t_box/: empty-scene.owl
semantic_scene_library/: build.gradle
sit/: build.gradle
sit/src/main/resources/: SWRL spatial Relations  simpleSIT.owl
sit/src/test/resources/: simpleSIT.owl  tableSIT.owl
sit/~/: aa.owl
src/it/emarolab/osr/: RecognitionManualSupervising.java  SemanticSheneRecognition.java
src/it/emarolab/osr/shapeTracking/: RansacTrackedShape.java  ShapeTracker.java  TrackedShape.java
(+241 files in other folders)
