<?xml version="1.0"?>
<package>
    <name>scene_identification_tagging</name>
    <version>1.0</version>
    <description>Semantic Scene Identification and Tagging</description>

    <maintainer email="luca.buoncompagni@edu.unige.it">Luca Buoncompagni</maintainer>
    <author email="luca.buoncompagni@edu.unige.it">Luca Buoncompagni</author>
    <url type="website">https://github.com/EmaroLab</url>
    <license>GPLv2</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rosjava_build_tools</build_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
